--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
     },
     "require": {
         "magento/magento-cloud-metapackage": ">=2.4.5 <2.4.6",
-        "magento/composer-root-update-plugin": "^2.0.2"
+        "magento/composer-root-update-plugin": "^2.0.2",
+        "magento/product-enterprise-edition": ">=2.4.5-p1",
+
     },
     "suggest": {
         "ext-pcntl": "Need for run processes in parallel mode"
