--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "require": {
         "magento/magento-cloud-metapackage": ">=2.4.5 <2.4.6",
         "magento/composer-root-update-plugin": "^2.0.2",
-        "magento/product-enterprise-edition": ">=2.4.5-p1",
+        "magento/product-enterprise-edition": "2.4.5-p1"
 
     },
     "suggest": {
